packetti jasonin fix

--- a/package.json
+++ b/package.json
@@ -1,15 +1,24 @@
 {
-  "name": "tpaivaa",
+  "name": "firstBot",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Bot Juttu",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "Tomi Hakkarainen",
   "license": "ISC",
   "dependencies": {
     "botbuilder": "^3.4.4",
     "restify": "^4.3.0"
-  }
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/tpaivaa/firstBot.git"
+  },
+  "bugs": {
+    "url": "https://github.com/tpaivaa/firstBot/issues"
+  },
+  "homepage": "https://github.com/tpaivaa/firstBot"
 }
